--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,8 +42,8 @@ android {
 }
 
 dependencies {
-//    implementation 'com.android.support:support-compat:28.0.0'
     implementation "androidx.core:core:1.1.0"
+    implementation 'pub.devrel:easypermissions:3.0.0'
 }
 
 
