--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'pub.devrel:easypermissions:3.0.0'
 }
