--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,6 +43,7 @@ android {
 
 dependencies {
     implementation "androidx.core:core:1.1.0"
+    implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'pub.devrel:easypermissions:3.0.0'
 }
 
