--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,13 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.example.photo_album_manager
-    pluginClass: PhotoAlbumManagerPlugin
+  platforms:
+    android:
+      package: com.example.photo_album_manager
+      pluginClass: PhotoAlbumManagerPlugin
+    ios:
+      pluginClass: PhotoAlbumManagerPlugin
+
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
