--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,8 +17,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  photo_album_manager:
-    path: ../
+  photo_album_manager: ^1.1.4
+#  photo_album_manager:
+#    path: ../
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
