--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,9 +17,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  photo_album_manager: ^1.1.4
-#  photo_album_manager:
-#    path: ../
+  toast: ^0.1.5
+  photo_album_manager:
+    path: ../
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
